# arynoxtech_world_models

./: .gitignore  COMMERCIAL_DEPLOYMENT.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  THESIS.md  api.py  config.json  dashboard.py  docker-compose.prod.yml  docker-compose.staging.yml  main.py  pyproject.tom  pyproject.toml  requirements.txt  run_cognitive_agent.bat  run_cognitive_agent.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
LLM_integration/: DEPLOYMENT.md  __init__.py  app.py  auth.py  cognitive_agent.py  text_encoder.py
benchmarks/: benchmark.py
deploy/: production_deploy.sh
examples/: quick_start.py
model/: actor.py  critic.py  decoder.py  encoder.py
real_world_dataset_training_with_world_models_model/: download_datasets.py  download_pilot_datasets.py  evaluate_ai4i.py  run_pipeline.sh  train_ai4i.py  train_all_pilot_datasets.py
real_world_dataset_training_with_world_models_model/data_loaders/: __init__.py  ai4i_predictive.py
src/world_model/: __init__.py  agent.py  deployment.py
src/world_model/model/: __init__.py  reward_predictor.py  rssm.py
src/world_model/training/: __init__.py  trainer.py
src/world_model/utils/: __init__.py  losses.py
tests/: test_auth.py  test_world_model.py
utils/: replay_buffer.py
